@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.884 2020/03/10 15:21:00 fcambus Exp $
+# $NetBSD: Makefile,v 1.885 2020/03/11 19:33:36 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -207,7 +207,6 @@ SUBDIR+=	go-smartcrop
 SUBDIR+=	gocr
 SUBDIR+=	goocanvas
 SUBDIR+=	goocanvas2
-SUBDIR+=	goocanvasmm
 SUBDIR+=	gource
 SUBDIR+=	gphoto2
 SUBDIR+=	gpick
