@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.1497 2020/03/11 19:31:03 wiz Exp $
+$NetBSD: CHANGES-2020,v 1.1498 2020/03/11 19:33:36 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -2063,3 +2063,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated mail/cue to 20180813 [nia 2020-03-11]
 	Removed mail/dovecot successor mail/dovecot2 [nia 2020-03-11]
 	Updated graphics/goocanvas2 to 2.0.4 [wiz 2020-03-11]
+	Removed graphics/goocanvasmm [wiz 2020-03-11]
